[package]
name = "yandex_translate_async"
version = "0.3.0"
authors = ["Colin Reeder <vpzomtrrfrt@gmail.com>"]
license = "GPL-3.0"
description = "tokio-based wrapper for the Yandex.Translate API"
repository = "https://github.com/vpzomtrrfrt/yandex_translate_async"

[dependencies]
serde_json = "1.0.17"
serde = "1.0.45"
serde_derive = "1.0.45"
futures = "0.1"
serde_urlencoded = "0.5.1"
hyper = "0.12.5"
hyper-tls = "0.3.0"

[dev-dependencies]
tokio = "0.1.7"
